--- a/bind-formula/bind/map.jinja
+++ b/bind-formula/bind/map.jinja
@@ -140,8 +140,23 @@
         'log_dir': '/var/log/named',
         'user': 'bind'
     },
-}, grain='osrelease', merge=salt['grains.filter_by']({
-    '15.3': {
-        'chroot_dir': '/var/lib/named'
-   },
-}, merge=salt['pillar.get']('bind:lookup')))) %}
+}, grain='os', merge=salt['grains.filter_by']({
+    'SL-Micro': {
+        'pkgs': [],
+        'image': 'registry.suse.com/suse/bind:latest',
+        'service': 'bind-container',
+        'container': True,
+        'named_directory': '/etc/named',
+        'container_named_directory': '/var/lib/named',
+        'group': '44',
+    },
+    'openSUSE Leap Micro': {
+        'pkgs': [],
+        'image': 'registry.opensuse.org/opensuse/bind:latest',
+        'service': 'bind-container',
+        'container': True,
+        'named_directory': '/etc/named',
+        'container_named_directory': '/var/lib/named',
+        'group': '44',
+    },
+}, grain='osfullname', merge=salt['pillar.get']('bind:lookup')))) %}
