--- a/dhcpd-formula/dhcpd/map.jinja
+++ b/dhcpd-formula/dhcpd/map.jinja
@@ -32,7 +32,8 @@
         'server': 'kea',
         'service': 'kea-container',
         'config': '/etc/kea/kea-dhcp4.conf',
-        'image': 'registry.opensuse.org/opensuse/kea:3.0',
+        'image': 'registry.suse.com/suse/kea:2.6',
+        'kea_3_0': False,
         'container': True,
     },
     'openSUSE Leap Micro': {
