--- a/dhcpd-formula/dhcpd/files/kea-dhcp4.conf.jinja
+++ b/dhcpd-formula/dhcpd/files/kea-dhcp4.conf.jinja
@@ -2,6 +2,7 @@
     Main Kea DHCPv4 configuration file.
     This template orchestrates the entire configuration generation.
 #}
+{% from "dhcpd/map.jinja" import dhcpd with context %}
 {%- set netmask_to_prefix = {
     '255.255.255.255': 32, '255.255.255.254': 31, '255.255.255.252': 30,
     '255.255.255.248': 29, '255.255.255.240': 28, '255.255.255.224': 27,
@@ -28,6 +29,24 @@
     "valid-lifetime": {{ salt['pillar.get']('dhcpd:default_lease_time', 600) }},
     "max-valid-lifetime": {{ salt['pillar.get']('dhcpd:max_lease_time', 3600) }},
 
+    {%- set standalone_subnets = salt['pillar.get']('dhcpd:subnets', {}) %}
+    {%- if not dhcpd.kea_3_0 %}
+      {%- set class_filename = {} %}
+      {%- for subnet, config in standalone_subnets.items() %}
+          {%- for name, value in config.items() %}
+              {%- if name.startswith("filename") %}
+                  {%- if class_filename.get(name) and value and class_filename.get(name) != value %}
+                      ERROR: multiple different values for {{ name }} are not supported
+                  {%- else %}
+                      {%- if value %}
+                          {%- do class_filename.update({name: value}) %}
+                      {%- endif %}
+                  {%- endif %}
+              {%- endif %}
+          {%- endfor %}
+      {%- endfor %}
+    {%- endif %}
+
     // Kea applies options from the LAST class a client matches.
     // Order classes from least specific to most specific to replicate if/elsif logic.
     "client-classes": [
@@ -35,22 +54,62 @@
         {
             "name": "BIOS",
             "test": "option[93].hex == 0x0000"
+            {%- if not dhcpd.kea_3_0 and "filename" in class_filename %},
+            "option-data": [
+                {
+                    "name": "boot-file-name",
+                    "data": "{{ class_filename["filename"] }}"
+                }
+            ]
+            {%- endif %}
         },
         {
             "name": "EFI_x64",
             "test": "option[93].hex == 0x0007"
+            {%- if not dhcpd.kea_3_0 and "filename_efi" in class_filename %},
+            "option-data": [
+                {
+                    "name": "boot-file-name",
+                    "data": "{{ class_filename["filename_efi"] }}"
+                }
+            ]
+            {%- endif %}
         },
         {
             "name": "EFI_ARM64",
             "test": "option[93].hex == 0x000b"
+            {%- if not dhcpd.kea_3_0 and "filename_efi_arm64" in class_filename %},
+            "option-data": [
+                {
+                    "name": "boot-file-name",
+                    "data": "{{ class_filename["filename_efi_arm64"] }}"
+                }
+            ]
+            {%- endif %}
         },
         {
             "name": "HTTPClient",
             "test": "substring(option[60].hex, 0, 10) == 'HTTPClient'"
+            {%- if not dhcpd.kea_3_0 and "filename_http" in class_filename %},
+            "option-data": [
+                {
+                    "name": "boot-file-name",
+                    "data": "{{ class_filename["filename_http"] }}"
+                }
+            ]
+            {%- endif %}
         },
         {
             "name": "HTTPClient_ARM64",
             "test": "substring(option[60].hex, 0, 10) == 'HTTPClient' and option[93].hex == 0x000d"
+            {%- if not dhcpd.kea_3_0 and "filename_http_arm64" in class_filename %},
+            "option-data": [
+                {
+                    "name": "boot-file-name",
+                    "data": "{{ class_filename["filename_http_arm64"] }}"
+                }
+            ]
+            {%- endif %}
         }
     ],
 
@@ -97,7 +156,6 @@
     {%- set subnet_id = 1 %}
     "subnet4": [
         // Render subnets not in a shared network
-        {%- set standalone_subnets = salt['pillar.get']('dhcpd:subnets', {}) %}
         {%- for subnet, config in standalone_subnets.items() %}
         {%- include 'dhcpd/files/kea-subnet.jinja' with context %}
         {% if not loop.last or salt['pillar.get']('dhcpd:shared_networks', {}) %},{% endif %}
