Use registry.suse.com on SLE

--- a/bind-formula/bind/map.jinja
+++ b/bind-formula/bind/map.jinja
@@ -162,7 +162,7 @@
 }, grain='osfullname', merge=salt['grains.filter_by']({
   'SUSE Linux Enterprise Server 15 SP7': {
         'pkgs': [],
-        'image': 'registry.opensuse.org/opensuse/bind:latest',
+        'image': 'registry.suse.com/suse/bind:latest',
         'service': 'bind-container',
         'container': True,
         'named_directory': '/var/lib/named',
